--- a/demoApp.html
+++ b/demoApp.html
@@ -22,6 +22,8 @@
                             <input class="mark" type="checkbox" ng-model="todo.completed">
                             <span>{{todo.title}}</span>
                             <span class="close" ng-click="removeTodo(todo)">x</span>
+                            <!-- <span class="close" ng-click="moveUp(todo)">Up</span>
+                            <span class="close" ng-click="moveDown(todo)">Down</span> -->
                         </div>
                     </li>
                 </ul>
